deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmota-bu-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nmota-bu-playground
  template:
    metadata:
      labels:
        app: nmota-bu-playground
    spec:
      containers:
      - name: nmota-bu-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 80
