service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nmota-bu-svc
spec:
  selector:
    app: nmota-bu-playground
  ports:
  - port: 80
    targetPort: 80
