ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nmota-bu-ingress
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nmota-bu-svc
            port:
              number: 8081
